# stravaheatmap

./: README.md  setup.cfg
src/stravaheatmap/cartograph/: __init__.py  __main__.py  onlinemap.py
src/stravaheatmap/josm/: __init__.py  imgupdater.py
