[metadata]
name = stravaheatmap
version = 4.3
author = solitone
author_email = solitone@mail.com
description = A python utility to provide the high resolution Strava Heatmap to cartographic applications like JOSM and Cartograph Maps.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/solitone/stravaheatmap
project_urls =
    Bug Tracker = https://github.com/solitone/stravaheatmap/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    colorama
    stravacookies

[options.packages.find]
where = src
